<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="@string/titulo"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="@string/labelNome" />

        <EditText
            android:id="@+id/nomeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:hint="@string/nome"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="@string/labelEmail" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <CheckBox
            android:id="@+id/emailCb"
            android:text="@string/oportunidades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="@string/labelTelefone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/telefoneEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:hint="@string/telefone"
                android:inputType="phone" />

            <Spinner
                android:id="@+id/telefoneSp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:entries="@array/tipoTelefone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/celularEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:hint="@string/celular"
                android:inputType="phone"
                android:visibility="gone"/>

            <CheckBox
                android:id="@+id/celularCb"
                android:text="@string/adicionar_celular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="@string/labelSexo" />

        <RadioGroup
            android:id="@+id/sexoRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/masculinoRb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:text="@string/masculino"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/femininoRb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:text="@string/feminino" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="@string/labelData" />

        <EditText
            android:id="@+id/dataEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:inputType="date" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="@string/labelFormacao" />

        <Spinner
            android:id="@+id/formacaoSp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:entries="@array/formacao"/>

        <EditText
            android:id="@+id/anoFundamentalEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ano"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:inputType="number"
            android:visibility="gone"/>


        <EditText
            android:id="@+id/anoMedioEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ano"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:inputType="number"
            android:visibility="gone"/>


        <LinearLayout
            android:id="@+id/graduacaoll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/anoGraduacaoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ano"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:inputType="number" />

            <EditText
                android:id="@+id/instGraduacaoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/instituicao"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/especializacaoll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/anoEspecializacaoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ano"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:inputType="number" />

            <EditText
                android:id="@+id/instEspecializacaoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/instituicao"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mestradoll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/anoMestradoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ano"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:inputType="number" />

            <EditText
                android:id="@+id/instMestradoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/instituicao"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/monoMestradoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/monografia"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/orientMestradoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/orientador"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/doutoradoll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/anoDoutoradoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ano"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:inputType="number" />

            <EditText
                android:id="@+id/instDoutoradoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/instituicao"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/monoDoutoradoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/monografia"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/orientDoutoradoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/orientador"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:inputType="textPersonName" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="@string/labelVaga" />

        <EditText
            android:id="@+id/vagaEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vaga"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:inputType="textPersonName" />

        <LinearLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/limparBt"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/limpar"/>

            <Button
                android:id="@+id/salvarBt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/salvar" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>